--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,14 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+Patient/migrations/0001_initial.py
+Patient/migrations/0002_alter_patient_personid.py
+Patient/migrations/0003_auto_20210716_1353.py
+Patient/migrations/0004_auto_20210716_1400.py
+UserData/migrations/0002_auto_20210716_1346.py
+media/Corona3/Capture2.PNG
+media/media/Corona3/Book2.xlsx
+media/media/Corona3/rawdata_ตวอยาง_2.txt
+media/media/Corona3/นบขอวาง_ไมกา.xlsx
+Patient/migrations/0005_auto_20210716_1500.py
+UserData/migrations/0003_alter_user_options.py
