--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,37 @@
+appdirs==1.4.4
 asgiref==3.4.1
+atomicwrites==1.4.0
+attrs==21.2.0
 certifi==2021.5.30
 charset-normalizer==2.0.3
+colorama==0.4.4
+distlib==0.3.1
 Django==3.2.5
+django-crispy-forms==1.11.2
 django-thaidate==1.0.2
+Faker==8.10.3
+filelock==3.0.12
 idna==3.2
+importlib-metadata==4.6.1
+iniconfig==1.1.1
+mixer==7.1.2
+mysqlclient==2.0.3
+numpy==1.20.3
+packaging==21.0
+Pillow==8.2.0
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+pytest-django==4.4.0
+python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
+six==1.15.0
 sqlparse==0.4.1
+text-unidecode==1.3
+toml==0.10.2
 typing-extensions==3.10.0.0
 urllib3==1.26.6
+virtualenv==20.4.2
+zipp==3.5.0
