--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==21.2.0
 certifi==2021.5.30
 charset-normalizer==2.0.3
 colorama==0.4.4
+coverage==5.5
 distlib==0.3.1
 Django==3.2.5
 django-crispy-forms==1.11.2
@@ -14,6 +15,7 @@ filelock==3.0.12
 idna==3.2
 importlib-metadata==4.6.1
 iniconfig==1.1.1
+lxml==4.6.3
 mixer==7.1.2
 mysqlclient==2.0.3
 numpy==1.20.3
@@ -23,8 +25,10 @@ pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
+pytest-cov==2.12.1
 pytest-django==4.4.0
 python-dateutil==2.8.2
+python-docx==0.8.11
 pytz==2021.1
 requests==2.26.0
 six==1.15.0
