--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = AFCOVID.settings
 addopts = -v -s --cov=Patient/tests/ --no-cov-on-fail
-python_files = tests.py test_*.py *_tests.py
+python_files = test_2viewsHD.py test_*.py *_tests.py
